--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -7,6 +7,10 @@ html, body {
   box-sizing: inherit;
 }
 
-h1 {
-  color: #2574D0;
+div {
+  margin: 100px auto;
+  width: 500px;
+  height: 500px;
+  border: 3px solid;
+  padding: 10px;
 }
