--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -7,10 +7,15 @@ html, body {
   box-sizing: inherit;
 }
 
-div {
-  margin: 100px auto;
+div.window-box {
+  margin: 50px auto;
   width: 500px;
   height: 500px;
   border: 3px solid;
   padding: 10px;
+}
+
+.image-list > img {
+  width: 474px;
+  height: 474px;
 }
